--- a/Assignment-3/makefile
+++ b/Assignment-3/makefile
@@ -1,11 +1,11 @@
-debug: tester.o node.o string_set.o
-	g++ -o debug tester.o node.o string_set.o 
+debug: my_tests.o node.o string_set.o
+	g++ -o debug my_tests.o node.o string_set.o 
 
-a.out: tester.o node.o string_set.o
-	g++ tester.o node.o string_set.o
+a.out: my_tests.o node.o string_set.o
+	g++ my_tests.o node.o string_set.o
 
-tester.o: node.h string_set.h tester.cpp
-	g++ -c -g tester.cpp
+my_tests.o: node.h string_set.h my_tests.cpp
+	g++ -c -g my_tests.cpp
 
 node.o: node.cpp node.h
 	g++ -c -g node.cpp
@@ -14,4 +14,4 @@ string_set.o: string_set.h node.h string_set.cpp
 	g++ -c -g string_set.cpp
 
 clean:
-	rm -f tester.o node.o string_set.o a.out
+	rm -f my_tests.o node.o string_set.o a.out
