--- a/SpreadsheetListGUI/SpreadsheetListGUI.csproj
+++ b/SpreadsheetListGUI/SpreadsheetListGUI.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F50891BF-7F53-493F-A950-39DC34F01B61}</ProjectGuid>
+    <ProjectGuid>{DDD8F636-AD72-4255-A601-F7004B3C1FB5}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>ClientGUI</RootNamespace>
-    <AssemblyName>ClientGUI</AssemblyName>
+    <RootNamespace>SpreadsheetListGUI</RootNamespace>
+    <AssemblyName>SpreadsheetListGUI</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -46,16 +46,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ClientGUI.cs">
+    <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ClientGUI.Designer.cs">
-      <DependentUpon>ClientGUI.cs</DependentUpon>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="ClientGUI.resx">
-      <DependentUpon>ClientGUI.cs</DependentUpon>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
