uncommitted changes from last week

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,9 @@
 cade: user_model spreadsheet_model spreadsheet_controller network_controller network_library main.cpp
 	g++ -std=c++11  -o ../bin/main  main.cpp ../bin/user_model.o ../bin/spreadsheet_model.o ../bin/spreadsheet_controller.o ../bin/network_controller.o ../bin/network_library.o -lpthread -I ../libs/boost/include
 
+jabrail: user_model spreadsheet_model spreadsheet_controller network_controller network_library main.cpp
+	g++ -std=c++11  -o ../bin/main  main.cpp ../bin/user_model.o ../bin/spreadsheet_model.o ../bin/spreadsheet_controller.o ../bin/network_controller.o ../bin/network_library.o -lpthread -I ../../../boost/include
+
 all: user_model spreadsheet_model spreadsheet_controller network_controller network_library main.cpp
 	g++ -std=c++11  -o ../bin/main  main.cpp ../bin/user_model.o ../bin/spreadsheet_model.o ../bin/spreadsheet_controller.o ../bin/network_controller.o ../bin/network_library.o 
 
