got rid of dependency graph files

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,8 @@
 ############################
 # Cade
 ############################
-cade: spreadsheet_model spreadsheet_controller dependency_graph cell server_cade
-	g++ -std=c++11  -o ../bin/executables/server  ./server/main.cpp ../bin/objects/server.o  ../bin/objects/spreadsheet_model.o ../bin/objects/spreadsheet_controller.o  ../bin/objects/dependency_graph.o ../bin/objects/cell.o -lpthread -I ../libs/boost/include -DBOOST_SYSTEM_NO_DEPRECATED
+cade: spreadsheet_model spreadsheet_controller cell server_cade
+	g++ -std=c++11  -o ../bin/executables/server  ./server/main.cpp ../bin/objects/server.o  ../bin/objects/spreadsheet_model.o ../bin/objects/spreadsheet_controller.o ../bin/objects/cell.o -lpthread -I ../libs/boost/include -DBOOST_SYSTEM_NO_DEPRECATED
 
 server_cade: ./server/Server.cpp ./server/Server.h ./server/ClientConnection.h
 	g++ -std=c++11 -o ../bin/objects/server.o -c ./server/Server.cpp -I ../libs/boost/include
@@ -10,8 +10,8 @@ server_cade: ./server/Server.cpp ./server/Server.h ./server/ClientConnection.h
 ############################
 # Normal
 ############################
-all: spreadsheet_model spreadsheet_controller dependency_graph cell server_all
-	g++ -std=c++11  -o ../bin/executables/server  ./server/main.cpp  ../bin/objects/server.o ../bin/objects/spreadsheet_model.o ../bin/objects/dependency_graph.o ../bin/objects/cell.o ../bin/objects/spreadsheet_controller.o
+all: spreadsheet_model spreadsheet_controller cell server_all
+	g++ -std=c++11  -o ../bin/executables/server  ./server/main.cpp  ../bin/objects/server.o ../bin/objects/spreadsheet_model.o ../bin/objects/cell.o ../bin/objects/spreadsheet_controller.o
 
 server_all: ./server/Server.cpp ./server/Server.h ./server/ClientConnection.h
 	g++ -std=c++11 -o ../bin/objects/server.o -c ./server/Server.cpp 
@@ -26,9 +26,6 @@ spreadsheet_model: ./models/SpreadsheetModel.cpp ./models/SpreadsheetModel.h
 spreadsheet_controller: ./controllers/SpreadsheetController.cpp ./controllers/SpreadsheetController.h
 	g++ -std=c++11  -o ../bin/objects/spreadsheet_controller.o -c ./controllers/SpreadsheetController.cpp
 
-dependency_graph: ./models/DependencyGraph.cpp ./models/DependencyGraph.h 
-	g++ -std=c++11 -o ../bin/objects/dependency_graph.o -c ./models/DependencyGraph.cpp
-
 cell: ./models/Cell.cpp ./models/Cell.h
 	g++ -std=c++11 -o ../bin/objects/cell.o -c ./models/Cell.cpp
 
@@ -42,10 +39,10 @@ client_cade: ./tests/client.cpp
 	g++ -std=c++11 -o ../bin/tests/client ./tests/client.cpp -I ../libs/boost/include -lpthread
 
 spreadsheet_controller_tests: ./tests/spreadsheet_controller_tests.cpp
-	g++ -std=c++11 -o ../bin/tests/spreadsheet_controller ./tests/spreadsheet_controller_tests.cpp ../bin/objects/spreadsheet_controller.o ../bin/objects/server.o ../bin/objects/spreadsheet_model.o ../bin/objects/dependency_graph.o ../bin/objects/cell.o
+	g++ -std=c++11 -o ../bin/tests/spreadsheet_controller ./tests/spreadsheet_controller_tests.cpp ../bin/objects/spreadsheet_controller.o ../bin/objects/server.o ../bin/objects/spreadsheet_model.o ../bin/objects/cell.o
 
 spreadsheet_model_tests: ./tests/spreadsheet_model_tests.cpp
-	g++ -std=c++11 -o ../bin/tests/spreadsheet_model ../bin/objects/spreadsheet_model.o ../bin/objects/dependency_graph.o ../bin/objects/cell.o ./tests/spreadsheet_model_tests.cpp
+	g++ -std=c++11 -o ../bin/tests/spreadsheet_model ../bin/objects/spreadsheet_model.o ../bin/objects/cell.o ./tests/spreadsheet_model_tests.cpp
 
 ######################
 # Cleaning binaries
